Attempt to fix weird bugs on mobile, change styles and refactor

--- a/styles/chat.module.css
+++ b/styles/chat.module.css
@@ -143,6 +143,7 @@
   margin-left: auto;
   background: #215046;
   border-radius: 10px 10px 0px 10px;
+  white-space: pre-line;
 }
 
 .other-message {
