--- a/styles/signed-in-navbar.module.css
+++ b/styles/signed-in-navbar.module.css
@@ -221,7 +221,7 @@
     left: 0;
     width: 100vw;
     z-index: 2;
-    overflow-y: visible;
+    padding-bottom: 50px;
   }
 
   .top-bar {
